# xmpp-share-server

./: .addcopyright  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  README
debian/: changelog  control  xmpp-share-client.init  xmpp-share-client.install  xmpp-share-server.conf.example  xmpp-share-server.default  xmpp-share-server.init  xmpp-share-server.install  xmpp-share-server.logrotate  xmpp-share-server.postinst  xmpp-share-server.postrm
doc/: xmpp-share-server.conf  xmpp-share-server.passwd
src/: CMakeLists.txt  client.cpp  client.h  config.h.in  server.cpp  server.h
src/plugins/: CMakeLists.txt  QXmppIncomingBosh.cpp  QXmppIncomingBosh.h  mod_archive.cpp  mod_archive.h  mod_archive.pluginspec  mod_auth.cpp  mod_auth.h  mod_auth.pluginspec  mod_auth_proxy.cpp  mod_auth_proxy.h  mod_auth_proxy.pluginspec  mod_bosh.cpp  mod_bosh.h  mod_bosh.pluginspec  mod_diag.cpp  mod_diag.h  mod_diag.pluginspec  mod_disco.cpp  mod_disco.h  mod_disco.pluginspec  mod_http.cpp  mod_http.h  mod_http.pluginspec  mod_muc.cpp  mod_muc.h  mod_muc.pluginspec  mod_ping.cpp  mod_ping.h  mod_ping.pluginspec  mod_presence.cpp  mod_presence.h  mod_presence.pluginspec  mod_privacy.cpp  mod_privacy.h  mod_privacy.pluginspec  mod_private.cpp  mod_private.h  mod_private.pluginspec  mod_proxy65.cpp  (+26 more)
